--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -11,7 +11,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Bienvenido al Home</h1>
+    <h1>Air Sences</h1>
     <a href="/products">products</a>
     <a href="/blog">blog</a>
     <a href="/features">features</a>
